# SPDX-License-Identifier: MIT-0

module(name = "drake_external_examples")

# Add the Bazel rulesets we need.
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_python", version = "0.31.0")

# Use the host system python.
register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")

# Use the host system Eigen.
local_eigen_repositiory = use_repo_rule("//:eigen.bzl", "local_eigen_repository")
local_eigen_repositiory(name = "eigen")

# Use the local, precompiled Drake.
local_drake_repositiory = use_repo_rule("//:drake.bzl", "local_drake_repository")
local_drake_repositiory(name = "drake")
