[project]
name = "drake_cmake_installed"
version = "0.1.0"
description = ""
authors = [
    {name = "Siddharth Ancha", email = "sancha@mit.edu"},
]
dependencies = [
    # =========================================================================
    # drake dependencies
    # taken from https://github.com/RobotLocomotion/drake/blob/91e3dccea12c6b5fa73ec215d8af0ff4ee7f1876/setup/ubuntu/binary_distribution/packages-jammy.txt
    # =========================================================================
    "notebook>=6.5.3",
    "ipywidgets>=8.0.4",
    "lxml>=4.9.2",
    "matplotlib>=3.7.1",
    "munkres>=1.1.4",
    "numpy>=1.23.3",
    "pillow>=9.4.0",
    "pydot>=1.4.2",
    "pygame>=2.3.0",
    "tornado>=6.2",
    "u-msgpack-python>=2.7.2",
    "pyyaml>=6.0",
    "zmq>=0.0.0",
    # =========================================================================
    # build dependencies
    # =========================================================================
    "setuptools>=69.2.0",
]
requires-python = "<3.12,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true
